--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/bluetooth-serial": "^4.7.0",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/geolocation": "^4.15.0",
+    "@ionic-native/http": "^4.15.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-openweathermap": "^0.1.3",
     "ionicons": "3.0.0",
     "ng-canvas-gauges": "^2.0.3",
     "rxjs": "5.5.11",
@@ -52,7 +58,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "georeferencia app"
+      },
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
