--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^5.2.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
@@ -37,7 +39,7 @@
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.6",
     "cordova-plugin-splashscreen": "^5.0.2",
